--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.ml-agents": "file:E:/Documents/GitHub/ml-agents/com.unity.ml-agents",
     "com.unity.physics": "0.3.0-preview.1",
+    "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.3",
     "com.unity.textmeshpro": "2.0.1",
