--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.3.0-preview.9",
     "com.unity.cinemachine": "2.5.0",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "0.6.0-preview.9",
-    "com.unity.entities": "0.7.0-preview.19",
+    "com.unity.collections": "0.7.0-preview.2",
+    "com.unity.entities": "0.8.0-preview.8",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
-    "com.unity.ml-agents": "file:E:/Documents/GitHub/ml-agents/com.unity.ml-agents",
-    "com.unity.physics": "0.3.0-preview.1",
+    "com.unity.ml-agents": "file:D:/Projects/GitHub/ml-agents2/com.unity.ml-agents",
+    "com.unity.physics": "0.3.1-preview",
     "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.3",
